tests/src/snapshots/parser__parse_reassignment_variable.snap
---
source: tests/src/parser.rs
expression: "x := 47"
---
Ok(
    Module {
        start: 0,
        end: 7,
        imports: [],
        body: [
            Reassignment {
                start: 0,
                end: 7,
                left: Identifier {
                    start: 0,
                    end: 1,
                    name: "x",
                    inferred_type: Unknown,
                },
                right: NumericLiteral {
                    start: 5,
                    end: 7,
                    value: Int(
                        47,
                    ),
                    raw_value: "47",
                    inferred_type: Unknown,
                },
                inferred_type: Unknown,
            },
        ],
    },
)
