tests/src/snapshots/parser__parse_string_with_interpolation.snap
---
source: tests/src/parser.rs
expression: "\"hello $(name)!\""
---
Ok(
    Module {
        start: 0,
        end: 15,
        imports: [],
        body: [
            StringInterpolation {
                start: 1,
                end: 15,
                parts: [
                    StringLiteral {
                        start: 1,
                        end: 7,
                        value: "hello ",
                        inferred_type: Unknown,
                    },
                    Identifier {
                        start: 9,
                        end: 13,
                        name: "name",
                        inferred_type: Unknown,
                    },
                    StringLiteral {
                        start: 14,
                        end: 15,
                        value: "!",
                        inferred_type: Unknown,
                    },
                ],
                inferred_type: Unknown,
            },
        ],
    },
)
